k8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dots-frontend-service
spec:
  selector:
    app: dots-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
